--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -17,3 +17,27 @@
 .ml-2 {
   margin-left: 7px !important;
 }
+
+.upgrade_box {
+  background-color: #0cbaff;
+  padding: 3px 11px;
+  border-radius: 12px;
+  font-size: 14px;
+  color: #fff;
+  letter-spacing: 0.5px;
+}
+
+.user-circule {
+  width: 20px;
+  height: 20px;
+  background-color: rgb(38, 180, 112);
+  border-radius: 50px;
+  font-size: 9px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.exit_icon {
+  width: 20px;
+  height: 20px;
+}
