Search form has been created

--- a/src/components/AddWorkSpaces.css
+++ b/src/components/AddWorkSpaces.css
@@ -6,3 +6,17 @@
   background-color: #1b0c4b;
   border-color: #1b0c4b;
 }
+
+.has-search .form-control {
+  padding-left: 2rem;
+}
+
+.has-search .form-control-feedback {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+}
